@@ -1,5 +1,7 @@
 2009-03-03  higepon  <higepon@users.sourceforge.jp>
 
+        * TranscodedTextualOutputPort.h : Added.
+
         * TranscodedTextualInputPort.h : Added.
 
 2009-03-02  higepon  <higepon@users.sourceforge.jp>
